--- a/analyses/simulate_transmission/epidemics_odin_interop.qmd
+++ b/analyses/simulate_transmission/epidemics_odin_interop.qmd
@@ -71,6 +71,17 @@ initial_conditions <- matrix(
   nrow = length(demography_vector),
   ncol = 3L, byrow = TRUE
 ) * demography_vector
+
+# an intervention to close schools
+close_schools <- intervention(
+  type = "contacts",
+  time_begin = 200,
+  time_end = 260,
+  reduction = matrix(c(0.5, 0.01, 0.01))
+)
+
+# view the intervention
+close_schools
 ```
 
 ### Define an epidemic model in _odin_
