--- a/analyses/simulate_transmission/epidemics_odin_interop.qmd
+++ b/analyses/simulate_transmission/epidemics_odin_interop.qmd
@@ -67,9 +67,9 @@ close_schools
 
 # initial conditions defined as proportions and converted to absolute values
 initial_conditions <- matrix(
-  c(S = 1 - 1e-6, I = 1e-6, R = 0),
+  c(S = 1 - 1e-6, E = 0, I = 1e-6, R = 0),
   nrow = length(demography_vector),
-  ncol = 3L, byrow = TRUE
+  ncol = 4L, byrow = TRUE
 ) * demography_vector
 
 # an intervention to close schools
@@ -77,7 +77,7 @@ close_schools <- intervention(
   type = "contacts",
   time_begin = 200,
   time_end = 260,
-  reduction = matrix(c(0.5, 0.01, 0.01))
+  reduction = matrix(c(0, 0, 0))
 )
 
 # view the intervention
@@ -105,19 +105,23 @@ sir <- odin::odin({
 
   ## Derivatives
   deriv(S[]) <- -S[i] * lambda[i]
-  deriv(I[]) <- (S[i] * lambda[i]) - (gamma * I[i])
+  deriv(E[]) <- (S[i] * lambda[i]) - (nu * E[i])
+  deriv(I[]) <- (nu * E[i]) - (gamma * I[i])
   deriv(R[]) <- gamma * I[i]
 
   ## Initial conditions: passed by user
   initial(S[]) <- init_S[i]
+  initial(E[]) <- init_E[i]
   initial(I[]) <- init_I[i]
   initial(R[]) <- init_R[i]
 
   ## parameters
   beta <- user()
+  nu <- 1 / 3
   gamma <- 1 / 7
   C[, ] <- user() # user defined contact matrix
   init_S[] <- user()
+  init_E[] <- user()
   init_I[] <- user()
   init_R[] <- user()
   reduction[] <- user()
@@ -127,9 +131,11 @@ sir <- odin::odin({
   dim(lambda_prod) <- c(n, n)
   dim(lambda) <- n
   dim(S) <- n
+  dim(E) <- n
   dim(I) <- n
   dim(R) <- n
   dim(init_S) <- n
+  dim(init_E) <- n
   dim(init_I) <- n
   dim(init_R) <- n
   dim(reduction) <- n
@@ -142,13 +148,14 @@ sir <- odin::odin({
 ```{r}
 # initialise model and run over time 0 - 600
 mod <- sir$new(
-  beta = 1.3 / 7,
+  beta = 1.5 / 7,
   reduction = close_schools$reduction[,],
   intervention_interval = c(close_schools$time_begin, close_schools$time_end),
   C = contact_matrix, n = nrow(contact_matrix),
   init_S = initial_conditions[, 1],
-  init_I = initial_conditions[, 2],
-  init_R = initial_conditions[, 3]
+  init_E = initial_conditions[, 2],
+  init_I = initial_conditions[, 3],
+  init_R = initial_conditions[, 4]
 )
 t <- seq(0, 600)
 y <- mod$run(t)
