--- a/analyses/simulate_transmission/epidemics_odin_interop.qmd
+++ b/analyses/simulate_transmission/epidemics_odin_interop.qmd
@@ -77,7 +77,7 @@ close_schools <- intervention(
   type = "contacts",
   time_begin = 200,
   time_end = 260,
-  reduction = matrix(c(0.5, 0.1, 0.1))
+  reduction = matrix(c(0.15,0.15,0.15))
 )
 
 # view the intervention
@@ -93,14 +93,15 @@ This is an SIR model that omits the 'exposed' compartment for this demonstration
 sir <- odin::odin({
   # NOTE: crude time-dependence of transmission rate
   # similar to a `<rate_intervention>`
-  beta_t[] <- if (t > intervention_interval[1] && t < intervention_interval[2]) beta * (1.0 - reduction[i]) else beta*(1 + 0*reduction[i])
+  beta_reduce[] <- if (t > intervention_interval[1] && t < intervention_interval[2]) (1.0 - reduction[i]) else (1 + 0*reduction[i])
 
   # number of age groups taken from contact matrix passed by user
   n <- user()
 
   # FOI is contacts * infectious * transmission rate
   # returns a matrix, must be converted to a vector/1D array
-  lambda_prod[, ] <- C[i, j] * I[j] * beta_t[j]
+  lambda_prod[, ] <- C[i, j] * I[j] * beta * beta_reduce[j]* beta_reduce[i]
+  #lambda_prod2[, ] <- if (i != j) lambda_prod[i, j] * beta_reduce[i] else lambda_prod[i, j] # if want to keep diagonal the same
   lambda[] <- sum(lambda_prod[i, ])
 
   ## Derivatives
@@ -129,6 +130,7 @@ sir <- odin::odin({
 
   # dimensions - all rely on contact matrix
   dim(lambda_prod) <- c(n, n)
+  #dim(lambda_prod2) <- c(n, n)
   dim(lambda) <- n
   dim(S) <- n
   dim(E) <- n
@@ -139,7 +141,7 @@ sir <- odin::odin({
   dim(init_I) <- n
   dim(init_R) <- n
   dim(reduction) <- n
-  dim(beta_t) <- n
+  dim(beta_reduce) <- n
   dim(C) <- c(n, n)
   dim(intervention_interval) <- 2
 })
@@ -165,7 +167,37 @@ y <- as.data.table(y)
 y <- melt(y, id.vars = c("t"))
 
 ggplot(y[variable %like% "I"]) +
-  geom_line(aes(t, value, col = variable)) +
-  labs(x = "Time", y = "# Infectious", col = "Age group") +
-  facet_grid(~variable)
+  geom_vline(
+    xintercept = c(close_schools[["time_begin"]], close_schools[["time_end"]]),
+    colour = "red",
+    linetype = "dashed",
+    linewidth = 0.2
+  ) +
+  annotate(
+    geom = "text",
+    label = "Schools closed",
+    colour = "red",
+    x = 230, y = 400e3,
+    angle = 90,
+    vjust = "outward"
+  ) +
+  geom_line(
+    aes(t, value, col = variable) 
+  ) +
+  scale_colour_brewer(
+    palette = "Dark2",
+    labels = rownames(contact_matrix),
+    name = "Age group"
+  ) +
+  scale_y_continuous(
+    labels = scales::comma,
+    name = "Individuals infected"
+  ) +
+  labs(
+    x = "Model time (days)"
+  ) +
+  theme_bw() +
+  theme(
+    legend.position = "top"
+  )
 ```
