--- a/analyses/quantify_transmission/reproduction_number_serological_data.qmd
+++ b/analyses/quantify_transmission/reproduction_number_serological_data.qmd
@@ -9,7 +9,17 @@ editor_options:
 date: last-modified
 toc: true
 toc_float: true
+author: 
+  - name: "Adam Kucharski"
+    orcid: "0000-0001-8814-9421"
 ---
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
+```
 
 ## Ingredients
 
