--- a/analyses/quantify_transmission/reproduction_number_cluster_size.qmd
+++ b/analyses/quantify_transmission/reproduction_number_cluster_size.qmd
@@ -36,27 +36,28 @@ knitr::opts_chunk$set(
 # Load required packages
 library(epichains)
 library(MCMCpack)
-```
 
-```{r}
 # Define data
 mers_clusters = c(rep(1,27),c(2,2),c(3,4),c(4,3),c(5,2),7,13,26)
 
 # Show summary table of frequencies
-freq_df <- as.data.frame(table(mers_clusters)); names(freq_df) <- c("Cluster size", "Frequency")
+freq_df <- as.data.frame(table(mers_clusters))
+names(freq_df) <- c("Cluster size", "Frequency")
 
-# Create a table for the HTML document
-knitr::kable(freq_df, caption = "Frequencies of MERS Clusters")
+# Frequencies of MERS Clusters
+freq_df
+
 # Define likelihood function
 lik_function <- function(param) {
-  if (any(param <= 0)) return(-Inf) # Ensure positive parameters
+  # Ensure positive parameters
+  if (any(param <= 0)) return(-Inf)
   
   # Extract values of R and k
   r_val <- as.numeric(param[1])
   k_val <- as.numeric(param[2])
 
   # Define likelihood
-  log_likelihood <- likelihood(
+  log_likelihood <- epichains::likelihood(
     chains = mers_clusters,
     statistic = "size",
     offspring_dist = rnbinom,
@@ -79,21 +80,26 @@ n_burn <- 1e3
 # Initial guess for c(R,k):
 init_param <- c(R=0.5, k=0.5)
 # Run MCMC to estimate parameters
-result_mcmcpack <- MCMCmetrop1R(lik_function, 
-                                theta.init = init_param, 
-                                burnin = n_burn, 
-                                mcmc = n_iter, 
-                                thin = 1)
+result_mcmcpack <- MCMCpack::MCMCmetrop1R(
+  lik_function, 
+  theta.init = init_param, 
+  burnin = n_burn, 
+  mcmc = n_iter, 
+  thin = 1
+)
 
 # Calculate effective sample size (i.e. measure of MCMC mixing)
-ess_mcmcpack <- effectiveSize(result_mcmcpack)
+ess_mcmcpack <- coda::effectiveSize(result_mcmcpack)
 
 # Plot posterior estimates
-plot(result_mcmcpack)
-# Define helper function to calculate median and 95% credible interval from data.frame of MCMC samples
+# plot(result_mcmcpack)
+
+# Define helper function to calculate median and 95% credible interval
+# from data.frame of MCMC samples
 get_param <- function(x){
-  apply(x,2,function(y){val = signif(quantile(y,c(0.5,0.025,0.0975)),3);
-                        val_text <- paste0(val[1]," (95%: CrI: ",val[2],"-",val[3],")")})
+  apply(x,2,function(y){
+    val <- signif(quantile(y,c(0.5,0.025,0.0975)),3)
+    val_text <- paste0(val[1], " (95%: CrI: ", val[2], "-", val[3], ")")})
 }
 
 # Get posterior median and 95% CrI
