relocate single package howto including i2extras

--- a/internal/sandbox/epiparameter_extract_epiparam.qmd
+++ b/internal/sandbox/epiparameter_extract_epiparam.qmd
@@ -38,7 +38,7 @@ library(tidyverse)
 epidist_ebola <- epiparameter::epidist_db(
     disease = "Ebola",
     epi_dist = "serial_interval",
-    single_epidist = TRUE
+    single_epiparameter = TRUE
     )
 
 epidist_ebola
